// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PullSecretSection /> PullSecretSection Disabled should render 1`] = `
<Fragment>
  <p>
    Download or copy your pull secret. The install program will prompt you for your pull secret during installation.
  </p>
  <div>
    <Component
      isDisabled={true}
      variant="secondary"
    >
      Download pull secret
    </Component>
    <CopyToClipboard
      onCopy={null}
      text=""
    >
      <span
        style={
          Object {
            "margin": "10px",
          }
        }
      >
        <Component
          className="install--copy-pull-secret"
          id="copyPullSecret"
          isDisabled={true}
          tabIndex="0"
          type="button"
          variant="link"
        >
          <span
            aria-hidden="true"
            className="fa fa-paste"
          />
            Copy Pull Secret
        </Component>
      </span>
    </CopyToClipboard>
  </div>
</Fragment>
`;

exports[`<PullSecretSection /> PullSecretSection should render 1`] = `
<Fragment>
  <p>
    Download or copy your pull secret. The install program will prompt you for your pull secret during installation.
  </p>
  <div>
    <Download
      content="{\\"error\\":\\"\\"}
"
      file="pull-secret"
      style={
        Object {
          "display": "inline",
        }
      }
    >
      <Component
        isDisabled={false}
        variant="secondary"
      >
        Download pull secret
      </Component>
    </Download>
    <CopyToClipboard
      onCopy={[Function]}
      text="{\\"error\\":\\"\\"}
"
    >
      <span
        style={
          Object {
            "margin": "10px",
          }
        }
      >
        <Component
          className="install--copy-pull-secret"
          id="copyPullSecret"
          isDisabled={false}
          tabIndex="0"
          type="button"
          variant="link"
        >
          <span
            aria-hidden="true"
            className="fa fa-paste"
          />
            Copy Pull Secret
        </Component>
      </span>
    </CopyToClipboard>
  </div>
</Fragment>
`;
